Added chebyshev poly; small additions to polar quadrature

--- a/src/angle/CMakeLists.txt
+++ b/src/angle/CMakeLists.txt
@@ -30,6 +30,7 @@ SET(SRC
     ChebyshevLegendre.cc
     ChebyshevDPN.cc
     MomentIndexer.cc
+    LegendreDTN.cc
 )
 
 #-----------------------------------------------------------------------------#
