--- a/src/orthog/CMakeLists.txt
+++ b/src/orthog/CMakeLists.txt
@@ -18,6 +18,7 @@ SET(SRC
   DCT.cc
   DCP.cc
   Jacobi01.cc
+  ChebyshevU.cc
 )
 
 #-----------------------------------------------------------------------------#
