--- a/src/orthog/test/CMakeLists.txt
+++ b/src/orthog/test/CMakeLists.txt
@@ -23,6 +23,9 @@ TARGET_LINK_LIBRARIES(test_DCP    orthog)
 ADD_EXECUTABLE(test_Jacobi01           test_Jacobi01.cc)
 TARGET_LINK_LIBRARIES(test_Jacobi01    orthog)
 
+ADD_EXECUTABLE(test_ChebyshevU          test_ChebyshevU.cc)
+TARGET_LINK_LIBRARIES(test_ChebyshevU   orthog)
+
 ADD_EXECUTABLE(test_BasisComparison           test_BasisComparison.cc)
 TARGET_LINK_LIBRARIES(test_BasisComparison    orthog)
 
@@ -39,6 +42,8 @@ ADD_TEST(test_DCT   test_DCT      0)
 ADD_TEST(test_DCP   test_DCP      0)
 
 ADD_TEST(test_Jacobi01   test_Jacobi01      0)
+
+ADD_TEST(test_ChebyshevU   test_ChebyshevU      0)
 
 ADD_TEST(test_BasisComparisonAnalytic        test_BasisComparison      0)
 ADD_TEST(test_BasisComparisonDiscontinuous   test_BasisComparison      1)
