Added a simple PPM-based plotter.  Need drivers for plotting mesh and flux.

--- a/src/ioutils/CMakeLists.txt
+++ b/src/ioutils/CMakeLists.txt
@@ -13,6 +13,7 @@ SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(SRC
     IO_HDF5.cc
     SiloOutput.cc
+    PPMPlotter.cc
 )
 
 #-----------------------------------------------------------------------------#
