--- a/src/transport/CMakeLists.txt
+++ b/src/transport/CMakeLists.txt
@@ -15,6 +15,7 @@ SET(SRC
     CoarseMesh.cc
     CurrentTally.cc
     FissionSource.cc
+    Homogenize.cc
     ScatterSource.cc
     State.cc
     Sweeper.cc
