Major overhaul to CMake builds system.  A lots of repeated code to generate each library was replaced by an equivalent function.  There is probably even more room to consolidate.

--- a/src/drivers/CMakeLists.txt
+++ b/src/drivers/CMakeLists.txt
@@ -42,7 +42,7 @@ INSTALL_TARGETS(/bin xdetran)
 
 # This is the detran library to be linked against.
 ADD_LIBRARY(${LIB_NAME}
-            SHARED
+            ${LIB_TYPE}
             ${SRC} 
 )
 TARGET_LINK_LIBRARIES(${LIB_NAME}
