--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,9 +3,9 @@
 #------------------------------------------------------------------------------#
 
 project(detran)
-cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
+cmake_minimum_required(VERSION 2.8.6 FATAL_ERROR)
 set(DETRAN_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-LIST( APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" )
+list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 
 #------------------------------------------------------------------------------#
 # OPTIONS
@@ -18,26 +18,35 @@ if(NOT CMAKE_BUILD_TYPE)
       FORCE)
 endif()
 
-# Options for Python bindings. On or Off.
-SET(DETRAN_ENABLE_PYTHON NO CACHE BOOL      "Enable Python bindings via SWIG.")
-# Options for OpenMP directives. On or Off.
-SET(DETRAN_ENABLE_OPENMP NO CACHE BOOL      "Enable OpenMP for multithreaded solves.")
-# Options for PETSc. On or Off.
-SET(DETRAN_ENABLE_PETSC NO CACHE BOOL       "Build callow with PETSc .")
-# Options for SLEPc. On or Off.
-SET(DETRAN_ENABLE_SLEPC NO CACHE BOOL       "Build callow SLEPc.")
-# Options for gperftools. On or Off.
-SET(DETRAN_ENABLE_GPERFTOOLS NO CACHE BOOL  "Enable Google Performance Tools for profiling.")
-# Options for silo. On or Off.
-SET( DETRAN_ENABLE_SILO NO CACHE BOOL       "Enable SILO.")
-# Options for HDF5. On or Off.
-SET( DETRAN_ENABLE_HDF5 NO CACHE BOOL       "Enable HDF5.")
-# Options for Boost. On or Off.
-SET( DETRAN_ENABLE_BOOST NO CACHE BOOL      "Enable BOOST.")
+# Options for shared library. On or Off.
+set(BUILD_SHARED_LIBS YES CACHE BOOL        "Enable shared libraries.")
+set(LIB_TYPE STATIC)
+if(BUILD_SHARED_LIBS)
+  set(LIB_TYPE SHARED)
+endif()
 
-SET(DETRAN_COMPILED_DATE 7 CACHE INTEGER
-  "Date of compilation."
-)
+# Options for Python bindings. On or Off.
+set(DETRAN_ENABLE_PYTHON NO CACHE BOOL      "Enable Python bindings via SWIG.")
+# Options for OpenMP directives. On or Off.
+set(DETRAN_ENABLE_OPENMP NO CACHE BOOL      "Enable OpenMP for multithreaded solves.")
+# Options for PETSc. On or Off.
+set(DETRAN_ENABLE_PETSC NO CACHE BOOL       "Build callow with PETSc.")
+# Options for SLEPc. On or Off.
+set(DETRAN_ENABLE_SLEPC NO CACHE BOOL       "Build callow SLEPc.")
+# Options for gperftools. On or Off.
+set(DETRAN_ENABLE_GPERFTOOLS NO CACHE BOOL  "Enable gperftools for profiling.")
+# Options for silo. On or Off.
+set(DETRAN_ENABLE_SILO NO CACHE BOOL        "Enable SILO.")
+# Options for HDF5. On or Off.
+set(DETRAN_ENABLE_HDF5 NO CACHE BOOL        "Enable HDF5.")
+# Options for Boost. On or Off.
+set(DETRAN_ENABLE_BOOST NO CACHE BOOL       "Enable BOOST.")
+
+#------------------------------------------------------------------------------#
+# CONFIGURATION
+#------------------------------------------------------------------------------#
+
+set(DETRAN_COMPILED_DATE 7 CACHE INTEGER "Date of compilation.")
 
 macro(month RESULT)
   execute_process(COMMAND "date" "+%d/%m/%Y" OUTPUT_VARIABLE ${RESULT})
@@ -79,12 +88,17 @@ install(FILES ${PROJECT_BINARY_DIR}/detran_config/detran_config.hh
 #------------------------------------------------------------------------------#
 
 if(DETRAN_ENABLE_PYTHON)
-  find_package(SWIG REQUIRED)
-  INCLUDE(${SWIG_USE_FILE})
-  find_package(PythonLibs REQUIRED)
-  include_directories(${PYTHON_INCLUDE_PATH})
-  include_directories(${PROJECT_BINARY_DIR}/detran_config)
-  set(CMAKE_SWIG_FLAGS "-v")
+  if(BUILD_SHARED_LIBS)
+    find_package(SWIG REQUIRED)
+    include(${SWIG_USE_FILE})
+    find_package(PythonLibs REQUIRED)
+    include_directories(${PYTHON_INCLUDE_PATH})
+    include_directories(${PROJECT_BINARY_DIR}/detran_config)
+    set(CMAKE_SWIG_FLAGS "-v")
+  else()
+    set(DETRAN_ENABLE_PYTHON OFF)
+    message(STATUS "Disabling Python since it required shared libraries.")
+  endif()
 endif()
 
 if(DETRAN_ENABLE_OPENMP)
@@ -108,8 +122,8 @@ if(DETRAN_ENABLE_SILO)
   if(Silo_FOUND)
     include_directories(${Silo_INCLUDE_DIR})
   else()
-      set( DETRAN_ENABLE_SILO OFF )
-      message( STATUS "Disabling Silo since it was not found." )
+    set(DETRAN_ENABLE_SILO OFF)
+    message(STATUS "Disabling Silo since it was not found.")
   endif()
 endif()
 
@@ -119,12 +133,12 @@ if(DETRAN_ENABLE_HDF5)
     include_directories(${HDF5_INCLUDE_DIR})
     message("HDF5_INCLUDE_DIR = ${HDF5_INCLUDE_DIR}")
   else()
-      set( DETRAN_ENABLE_HDF5 OFF )
-      message( STATUS "Disabling HDF5 since it was not found." )
-      # Need to reset them, since FindHDF5 fills them with "not founds", 
-      # which leads to errors downstream.
-      set(HDF5_LIBRARIES "")
-      set(HDF_INCLUDE_DIR "")
+    set(DETRAN_ENABLE_HDF5 OFF)
+    message(STATUS "Disabling HDF5 since it was not found.")
+    # Need to reset them, since FindHDF5 fills them with "not founds".
+    # which leads to errors downstream.
+    set(HDF5_LIBRARIES "")
+    set(HDF5_INCLUDE_DIR "")
   endif()
 endif()
 
@@ -143,10 +157,9 @@ if(DETRAN_ENABLE_BOOST)
   if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
   else(Boost_FOUND)
-    set( DETRAN_ENABLE_BOOST OFF )
-    message( STATUS "Disabling BOOST since it was not found." )
-    # Need to reset them, since FindHDF5 fills them with "not founds", 
-    # which leads to errors downstream.
+    set(DETRAN_ENABLE_BOOST OFF)
+    message(STATUS "Disabling BOOST since it was not found.")
+    # Reset to avoid downstream errors due to NOTFOUND's.
     set(Boost_LIBRARIES "")
     set(Boost_INCLUDE_DIRS "")
   endif(Boost_FOUND)
@@ -157,19 +170,19 @@ endif()
 # TESTING
 #------------------------------------------------------------------------------#
 
-OPTION ( USE_TESTING "Build testing" ON )
-if ( DETRAN_ENABLE_TEST )
-    SET (CTEST_INITIAL_CACHE "COVERAGE_COMMAND:FILEPATH=/usr/bin/gcov")
+OPTION (USE_TESTING "Build testing" ON)
+if (DETRAN_ENABLE_TEST)
+    set (CTEST_INITIAL_CACHE "COVERAGE_COMMAND:FILEPATH=/usr/bin/gcov")
     # need for coverage -- probably a cleaner way to set this up.
-#    SET( CMAKE_CXX_FLAGS_DEBUG  "-g -O0  -fprofile-arcs -ftest-coverage" CACHE STRING "Choose" FORCE)
-#    SET( CMAKE_CXX_FLAGS        "-g -O0  -fprofile-arcs -ftest-coverage" CACHE STRING "Choose" FORCE)
-#    SET( CMAKE_EXE_LINKER_FLAGS "-g -O0  -fprofile-arcs -ftest-coverage" CACHE STRING "Choose" FORCE)
-#    SET( CTEST_MEMORYCHECK_COMMAND /usr/bin/valgrind CACHE STRING "Set the memory checking command." FORCE)
-#    SET( CTEST_MEMORYCHECK_COMMAND_OPTIONS "--tool=memcheck --leak-check=full" CACHE STRING 
+#    set( CMAKE_CXX_FLAGS_DEBUG  "-g -O0  -fprofile-arcs -ftest-coverage" CACHE STRING "Choose" FORCE)
+#    set( CMAKE_CXX_FLAGS        "-g -O0  -fprofile-arcs -ftest-coverage" CACHE STRING "Choose" FORCE)
+#    set( CMAKE_EXE_LINKER_FLAGS "-g -O0  -fprofile-arcs -ftest-coverage" CACHE STRING "Choose" FORCE)
+#    set( CTEST_MEMORYCHECK_COMMAND /usr/bin/valgrind CACHE STRING "Set the memory checking command." FORCE)
+#    set( CTEST_MEMORYCHECK_COMMAND_OPTIONS "--tool=memcheck --leak-check=full" CACHE STRING 
 #       "Set the memory checking command options." FORCE
 #    ) 
-    ENABLE_TESTING()
-    INCLUDE(CTest)
+    enable_testing()
+    include(CTest)
     # is there a better way?
     include_directories(utilities/test)
     include_directories(material/test)
@@ -185,7 +198,6 @@ if ( DETRAN_ENABLE_TEST )
     include_directories(postprocess/test)
     include_directories(ioutils/test)
 endif()
-
 
 #------------------------------------------------------------------------------#
 # INSTALL
@@ -217,16 +229,17 @@ include_directories(ioutils)
 include_directories(postprocess)
 
 # Set 
-if( NOT CMAKE_INSTALL_PREFIX)
-  set( CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR} CACHE STRING
-       "Installation prefix; default is build directory."
-       FORCE)
+if(NOT CMAKE_INSTALL_PREFIX)
+  set(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR} CACHE STRING
+      "Installation prefix; default is build directory."
+      FORCE)
 endif()
 
 #------------------------------------------------------------------------------#
 # SOURCE
 #------------------------------------------------------------------------------#
 
+include(SetupDetranLibrary)
 add_subdirectory(utilities)
 add_subdirectory(callow)
 add_subdirectory(material)
@@ -243,7 +256,7 @@ add_subdirectory(postprocess)
 add_subdirectory(drivers)
 
 # Python things for installation
-if( DETRAN_ENABLE_PYTHON )
+if(DETRAN_ENABLE_PYTHON)
   add_subdirectory(python)
 endif()
 
@@ -254,13 +267,18 @@ endif()
 message("---------------------------------------------------------------------")
 message("              SUMMARY OF CMAKE CONFIGURATION")
 message("---------------------------------------------------------------------")
-message("++++ Date:        ${DETRAN_COMPILED_M}|${DETRAN_COMPILED_D}|${DETRAN_COMPILED_Y}")
+message("++++ Date:        ${DETRAN_COMPILED_M}/${DETRAN_COMPILED_D}/${DETRAN_COMPILED_Y}")
 message("++++ System:      ${CMAKE_SYSTEM} ${CMAKE_SYSTEM_PROCESSOR}")
 message("++++ CXX:         ${CMAKE_CXX_COMPILER}")
 message("++++ Build type:  ${CMAKE_BUILD_TYPE}")
 message("++++ Install:     ${CMAKE_INSTALL_PREFIX}")
 
 message("---------------------------------------------------------------------")
+if(BUILD_SHARED_LIBS)
+message("++++ Shared:      enabled")
+else()
+message("++++ Shared:      disabled")
+endif()
 if(DETRAN_ENABLE_PYTHON)
 message("++++ Python:      enabled")
 else()
@@ -296,7 +314,7 @@ message("++++ HDF5:        enabled")
 else()
 message("++++ HDF5:        disabled")
 endif()
-if( DETRAN_ENABLE_BOOST )
+if(DETRAN_ENABLE_BOOST)
 message("++++ BOOST:       enabled")
 else()
 message("++++ BOOST:       disabled")
