--- a/src/detran_config/detran_config.hh.in
+++ b/src/detran_config/detran_config.hh.in
@@ -29,6 +29,9 @@
 #cmakedefine DETRAN_COMPILED_D ${DETRAN_COMPILED_D}
 #cmakedefine DETRAN_COMPILED_Y ${DETRAN_COMPILED_Y}
 
+// Architecture
+
+
 #endif // DETRAN_CONFIG_HH 
 
 //---------------------------------------------------------------------------//
