--- a/src/transport/CMakeLists.txt
+++ b/src/transport/CMakeLists.txt
@@ -2,15 +2,13 @@
 # src/transport/CMakeLists.txt
 #------------------------------------------------------------------------------#
 
-SET(LIB_NAME "transport")
-
-SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+set(LIB_NAME "transport")
 
 #-----------------------------------------------------------------------------#
 # SOURCE
 #-----------------------------------------------------------------------------#
 
-SET(SRC
+set(SRC
     BoundaryTally.cc
     CoarseMesh.cc
     CurrentTally.cc
@@ -35,52 +33,20 @@ SET(SRC
 )
 
 #-----------------------------------------------------------------------------#
-# SHARED LIBRARY
+# LINKED LIBRARIES
 #-----------------------------------------------------------------------------#
 
-ADD_LIBRARY(${LIB_NAME}
-            SHARED
-            ${SRC} 
-)
-TARGET_LINK_LIBRARIES(${LIB_NAME}
-                      angle
-                      boundary
-                      external_source
-                      geometry
-                      material
-                      utilities
+set(LINKED_LIBS
+    angle
+    boundary
+    external_source
+    geometry
+    material
+    utilities
 )
 
-INSTALL_FILES(/include/${LIB_NAME} .hh)
-INSTALL_TARGETS(/lib ${LIB_NAME})
-
 #-----------------------------------------------------------------------------#
-# TESTING
+# LIBRARY
 #-----------------------------------------------------------------------------#
 
-if( DETRAN_ENABLE_TEST )
-    include_directories(${SRC_DIR}/test)
-    add_subdirectory(${SRC_DIR}/test)
-endif()
-
-#-----------------------------------------------------------------------------#
-# PYTHON
-#-----------------------------------------------------------------------------#
-
-if(DETRAN_ENABLE_PYTHON)
-
-SET_SOURCE_FILES_PROPERTIES(detran_${LIB_NAME}.i PROPERTIES CPLUSPLUS ON)
-SWIG_ADD_MODULE(${LIB_NAME} python detran_${LIB_NAME}.i )
-SWIG_LINK_LIBRARIES(${LIB_NAME}
-                    ${PYTHON_LIBRARIES}
-                    ${LIB_NAME} 
-                    utilities
-                    )
-
-# Install the module and library
-INSTALL(FILES ${CMAKE_BINARY_DIR}/${LIB_NAME}/${LIB_NAME}.py
-        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
-INSTALL(FILES ${CMAKE_BINARY_DIR}/${LIB_NAME}/_${LIB_NAME}.so
-        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
-        
-endif()        
+setup_detran_library(${LIB_NAME} "${SRC}" "${LINKED_LIBS}")
