--- a/src/solvers/mg/CMakeLists.txt
+++ b/src/solvers/mg/CMakeLists.txt
@@ -11,7 +11,7 @@ SET(MG_SRC
   ${SRC_DIR}/DiffusionLossOperator.cc
   ${SRC_DIR}/MGPreconditioner.cc
   ${SRC_DIR}/MGDSA.cc
-  ${SRC_DIR}/CMMGDSA.cc
+  ${SRC_DIR}/MGCMDSA.cc
   PARENT_SCOPE
 )
 
