Lots of changes to faciliate characteristic-based response generation.

--- a/src/angle/CMakeLists.txt
+++ b/src/angle/CMakeLists.txt
@@ -4,12 +4,12 @@
 
 set(LIB_NAME "angle")
 
-#-----------------------------------------------------------------------------#
+#------------------------------------------------------------------------------#
 # SOURCE
-#-----------------------------------------------------------------------------#
+#------------------------------------------------------------------------------#
 
 set(SRC
-    Collocated.cc
+    #Collocated.cc
     DPN.cc
     DTN.cc
     GaussChebyshev.cc
@@ -18,29 +18,30 @@ set(SRC
     MomentToDiscrete.cc
     Quadrature.cc
     QuadratureFactory.cc
-    QuadratureMOC.cc
+    #QuadratureMOC.cc
     QuadrupleRange.cc
     SphericalHarmonics.cc
     TabuchiYamamoto.cc
-    Uniform.cc
+    #Uniform.cc
     UniformEqual.cc
     ProductQuadrature.cc
     ChebyshevLegendre.cc
     ChebyshevDPN.cc
     MomentIndexer.cc
     LegendreDTN.cc
+    PolarQuadrature.t.cc
 )
 
-#-----------------------------------------------------------------------------#
+#------------------------------------------------------------------------------#
 # LINKED LIBRARIES
-#-----------------------------------------------------------------------------#
+#------------------------------------------------------------------------------#
 
 set(LINKED_LIBS
     utilities
 )
 
-#-----------------------------------------------------------------------------#
+#------------------------------------------------------------------------------#
 # LIBRARY
-#-----------------------------------------------------------------------------#
+#------------------------------------------------------------------------------#
 
 setup_detran_library(${LIB_NAME} "${SRC}" "${LINKED_LIBS}")
