Major overhaul of quadratures.  1-D quadratures have been abstracted out as base quadratures.  Separate polar and azimuth quadratures exist, where the former becomes a 1-D quadrature for transport.  Together, the two make up product quadratures via templates.  Doing it this way has shaved a few hundred lines of code while providing many possible quadratures (over 80), though many combinations are not desirable (and hence not instantiated).  The MOC-specific quadratures have been eliminated as a move from cyclic tracking is made.  The source is still there for when I get a chance to adapt it to give essentially cyclic-tracking results without doing it explicitly.

--- a/src/angle/CMakeLists.txt
+++ b/src/angle/CMakeLists.txt
@@ -9,6 +9,8 @@ set(LIB_NAME "angle")
 #------------------------------------------------------------------------------#
 
 set(SRC
+    AbuShumaysDoubleRange.cc
+    AbuShumaysQuadrupleRange.cc
     #Collocated.cc
     DPN.cc
     DTN.cc
@@ -19,17 +21,18 @@ set(SRC
     Quadrature.cc
     QuadratureFactory.cc
     #QuadratureMOC.cc
-    QuadrupleRange.cc
+    #QuadrupleRange.cc
     SphericalHarmonics.cc
     TabuchiYamamoto.cc
     #Uniform.cc
     UniformEqual.cc
-    ProductQuadrature.cc
-    ChebyshevLegendre.cc
-    ChebyshevDPN.cc
+    #ChebyshevLegendre.cc
+    #ChebyshevDPN.cc
     MomentIndexer.cc
-    LegendreDTN.cc
+    #LegendreDTN.cc
     PolarQuadrature.t.cc
+    AzimuthalQuadrature.t.cc
+    ProductQuadrature.t.cc
 )
 
 #------------------------------------------------------------------------------#
