New plotting utilities, including color maps

--- a/src/ioutils/CMakeLists.txt
+++ b/src/ioutils/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SRC
     SiloOutput.cc
     PPMPlotter.cc
     PPMOutput.cc
+    ColorMap.cc
 )
 
 #-----------------------------------------------------------------------------#
