Initial addition of eispack routines for standard and general eigenvalue problems

--- a/src/callow/solver/CMakeLists.txt
+++ b/src/callow/solver/CMakeLists.txt
@@ -14,10 +14,9 @@ SET(SOLVER_SRC
   ${SRC_DIR}/EigenSolverCreator.cc
   ${SRC_DIR}/Davidson.cc
   ${SRC_DIR}/Eispack.cc
+  ${SRC_DIR}/Eispack.f90
   PARENT_SCOPE
 )
 
 # Install
 INSTALL_FILES(/include/callow/solver .hh)
-
-
