Modified Davidson to use eispack.  Testing indicates it works well.  I have not implemented handling for imaginary components that arise in the projected problem.  I anticipate these would be small and not important for transport problems.  It might warrant testing.

--- a/src/callow/test/CMakeLists.txt
+++ b/src/callow/test/CMakeLists.txt
@@ -34,10 +34,10 @@ ADD_EXECUTABLE(test_EigenSolver         test_EigenSolver.cc)
 TARGET_LINK_LIBRARIES(test_EigenSolver  callow )
 ADD_TEST(test_PowerIteration            test_EigenSolver 0)
 
-#ADD_EXECUTABLE(test_NonlinearArnoldi         test_NonlinearArnoldi.cc)
-#TARGET_LINK_LIBRARIES(test_NonlinearArnoldi  callow )
-#ADD_TEST(test_NonlinearArnoldi               test_NonlinearArnoldi 0)
+ADD_EXECUTABLE(test_Davidson            test_Davidson.cc)
+TARGET_LINK_LIBRARIES(test_Davidson     callow )
+ADD_TEST(test_Davidson                  test_Davidson 0)
 
-ADD_EXECUTABLE(test_Eispack         test_Eispack.cc)
-TARGET_LINK_LIBRARIES(test_Eispack  callow )
-ADD_TEST(test_Eispack               test_Eispack 0)
+ADD_EXECUTABLE(test_Eispack             test_Eispack.cc)
+TARGET_LINK_LIBRARIES(test_Eispack      callow )
+ADD_TEST(test_Eispack                   test_Eispack 0)
