Updated orthogonal basis stuff to use object factory.  Also added a DCT-based user-defined transformation basis.  This will allow one to define the zeroth order from which the remaining basis is found by reorthogonalizing via gram schmidt. I hope it works well for truncated energy expansions.

--- a/src/orthog/CMakeLists.txt
+++ b/src/orthog/CMakeLists.txt
@@ -17,6 +17,8 @@ set(SRC
   DCP.cc
   Jacobi01.cc
   ChebyshevU.cc
+  DDF.cc
+  TransformedBasis.cc
 )
 
 #-----------------------------------------------------------------------------#
