Some cleanup and fixed a petsc bug

--- a/src/callow/matrix/CMakeLists.txt
+++ b/src/callow/matrix/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Set source
 SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(MATRIX_SRC
+  ${SRC_DIR}/MatrixBase.cc 
   ${SRC_DIR}/Matrix.cc
   ${SRC_DIR}/MatrixShell.cc
   ${SRC_DIR}/MatrixDense.cc
